# synerex-platform

./: .cursorignore  .gitignore  README.md  check_services.ps1  restart_all_services.ps1
emv-program/: -files  grep -E .(dbsqlite)$  .gitignore  API_CLEANUP_REPORT.md  API_DUPLICATE_ANALYSIS.md  API_FUNCTIONALITY_REPORT.md  BUTTON_FIXES_SUMMARY.md  BUTTON_OVERLAP_FIXES.md  CALCULATION_FUNCTIONS_ANALYSIS.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_PLAN.md  CODE_CLEANUP_SUMMARY.md  COMPREHENSIVE_CODEBASE_CLEANUP_PLAN.md  COMPREHENSIVE_STANDARDS_AUDIT_REPORT.md  CONTRIBUTING.md  DASHBOARD_REPORT_BUTTONS_IMPLEMENTATION.md  DATA_FLOW_ANALYSIS.md  DIRECT_METER_INTEGRATION_PROPOSAL.md  DUPLICATION_ANALYSIS_REPORT.md  ENHANCED_SYNEREX_AI_IMPLEMENTATION.md  FINAL_CLEANUP_PLAN.md  FINAL_REFACTORING_REPORT.md  FIXES_SUMMARY_2026.md  HTML_REPLACEMENT_ANALYSIS.md  JAVASCRIPT_FILES_RELOCATION.md  JAVASCRIPT_JSON_FIXES_SUMMARY.md  MIGRATION_AND_TESTING_GUIDE.md  Makefile  My_Project_Audit.xlsx  NORMALIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZED_PORT_ARCHITECTURE.md  PLAN_REVIEW.md  PORT_MIGRATION_SUMMARY.md  PORT_RESTRUCTURE_PLAN.md  README.md  README_MAC.md  REFACTORING_PROGRESS_REPORT.md  REFACTORING_SPECIFICATIONS.md  RESTART_SERVER_FOR_PDF_MERGE.md  SAMPLE_VARIABLES_ANALYSIS.md  (+88 more)
emv-program/8082/: ASHRAE_COMPLIANCE_ISSUE.md  ASHRAE_REGRESSION_IMPLEMENTATION.md  AUDIT_COMPLIANCE_SUMMARY.md  BASE_TEMPERATURE_OPTIMIZATION.md  CSV_EDITOR_GUIDE.md  DEWPOINT_NORMALIZATION_FIX.md  DEWPOINT_VERIFICATION_FIX.md  FILE_ORGANIZATION_PLAN.md  MIGRATION_GUIDE.md  MULTI_TENANT_IMPLEMENTATION.md  PE_DASHBOARD_BACK_BUTTON_UPDATE.md  PE_DASHBOARD_ISSUE_FIX.md  PE_INTEGRATION_COMPLETE.md  README_LAUNCHER.md  SENSITIVITY_FACTOR_FIX.md  STANDARDS_COMPLIANCE_DOCUMENTATION.md  SYNEREX_AI_KNOWLEDGE_ENHANCEMENT_GUIDE.md  WEATHER_NORMALIZATION_AUDIT_FIX.md  WEATHER_NORMALIZATION_FACTOR_FIX_AUDIT.md  WEATHER_NORMALIZATION_NEGATIVE_EFFECT_FIX.md  all_database_security_issues.json  analysis_helpers.py  audit_page.html  audit_summary_section.html  cleanup_duplicate_files.py  code_review_analysis.json  code_review_status.json  common_validators.py  confirmation_system.py  create_fingerprint_files.py  css_styles.css  dashboard_check.html  dashboard_output.html  database_security_analysis.json  database_security_status.json  diagnose_synerex_ai_issue.py  dynamic_data_extraction.py  dynamic_report_20251009_081735.html  dynamic_standards_audit.py  energy_ai_guard_system.py  (+44 more)
(+658 files in other folders)
